<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_gray"
    tools:context=".RestorePassword">

    <TextView
        android:id="@+id/google_option_tv"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/restore_password_tv"
        android:textAlignment="center"
        android:textColor="@color/text_dark_charcoal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restore_password_ttl" />

    <ImageButton
        android:id="@+id/go_to_sign_in_imgbtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back_arrow"
        android:background="@android:color/transparent"
        android:src="@drawable/back_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restore_password_ttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/restore_password"
        android:textColor="@color/text_dark_charcoal"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/email_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_option_tv">

        <ImageView
            android:id="@+id/email_ico"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icon_description"
            android:src="@drawable/message_icon"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/text_dark_charcoal"
            android:colorControlNormal="@color/text_dark_charcoal"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_et_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/text_dark_charcoal"
            android:textColorHint="@color/text_dark_charcoal"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="emailAddress" />
    </LinearLayout>


    <Button
        android:id="@+id/restore_password_btn"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_primary_pink"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/restore_password_btn"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_lin" />


</androidx.constraintlayout.widget.ConstraintLayout>