<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_gray"
    tools:context=".SignUp">

    <ImageButton
        android:id="@+id/go_to_sign_in_imgbtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back_arrow"
        android:background="@android:color/transparent"
        android:src="@drawable/back_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_ttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_up_ttl"
        android:textColor="@color/text_dark_charcoal"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/username_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_ttl">

        <ImageView
            android:id="@+id/user_ico"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/user_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/icon_description" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/text_dark_charcoal"
            android:colorControlNormal="@color/text_dark_charcoal"
            android:fontFamily="@font/roboto"
            android:hint="@string/username_et_hint"
            android:inputType="textNoSuggestions"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/text_dark_charcoal"
            android:textColorHint="@color/text_dark_charcoal"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_lin">

        <ImageView
            android:id="@+id/email_ico"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/message_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/icon_description" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/text_dark_charcoal"
            android:colorControlNormal="@color/text_dark_charcoal"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_et_hint"
            android:inputType="textNoSuggestions"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/text_dark_charcoal"
            android:textColorHint="@color/text_dark_charcoal"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_lin">

        <ImageView
            android:id="@+id/password_ico"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/password_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/icon_description" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/text_dark_charcoal"
            android:colorControlNormal="@color/text_dark_charcoal"
            android:fontFamily="@font/roboto"
            android:hint="@string/password_et_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/text_dark_charcoal"
            android:textColorHint="@color/text_dark_charcoal"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>


    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_primary_pink"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_up_btn"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:elevation="8dp"
        android:translationZ="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_lin" />


</androidx.constraintlayout.widget.ConstraintLayout>